# homework

./: .env  .gitignore  Cargo.toml  README.md  build.rs  requirements.md
src/: app_response.rs  config.rs  database.rs  default_handler.rs  interfaces.rs  lib.rs  main.rs  service.rs
tests/: test_interfaces.rs
