[package]
name = "homework"
version = "0.1.0"
edition = "2021"

[dependencies]
salvo = {version = "0.73", features = ["oapi"]}
sqlx = {version = "0.8", features = ["runtime-tokio", "sqlite"]}
tokio = "1.41"
serde = "1.0"
dotenvy_macro = "0.15"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"

[build-dependencies]
sqlx = {version = "0.8", features = ["runtime-tokio", "sqlite"]}
tokio = {version = "1.41", features = ["macros"]}
dotenvy_macro = "0.15"


[lints.rust]
unused-must-use = "deny"
unused_variables = "deny"